# coda

./: .gitignore  Cargo.toml  README.md  bench-baseline.json
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: corpus.rs
corpus/: ann_bind_conflict.coda  ann_conflict.coda  ann_constrain.coda  ann_forward_decl.coda  ann_record.coda  ann_tag.coda  ann_wrong_arg.coda  arithmetic.coda  array_add.coda  array_ann.coda  array_broadcast_fail.coda  array_broadcast_scalar.coda  array_broadcast_scalar_left.coda  array_chain_ops.coda  array_dot.coda  array_dot_large.coda  array_index.coda  array_let_binding.coda  array_lift_compose.coda  array_lift_fn.coda  array_lift_multi.coda  array_lift_square.coda  array_lift_two_arg.coda  array_map.coda  array_multiply.coda  array_multiply_scalar.coda  array_negative.coda  array_rank2.coda  array_rank2_add.coda  array_rank2_broadcast.coda  array_rank2_double_index.coda  array_rank2_index.coda  array_rank2_lift.coda  array_rank2_shape_error.coda  array_rank3.coda  array_rank_mismatch.coda  array_slice.coda  array_subtract.coda  array_subtract_scalar.coda  bench_fib.coda  (+42 more)
docs/: CLAUDE.md  _config.yml  roadmap.md
docs/internal/: parser.md  tensor-types.md
runtime/: runtime.c  runtime.h
src/: ast.rs  codegen.rs  eval.rs  lib.rs  main.rs  module.rs  parser.rs  types.rs
tests/: compile_tests.rs  corpus_tests.rs  eval_tests.rs  parse_tests.rs  type_tests.rs
